fixing loop-buttons on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1258,6 +1258,9 @@ extend_ -> fill_
 		width: 100%;
 	}
 
+	#loopButtons {
+		width: 155px;
+	}
 
 	/* special for songList*/
   #songPickerAttachedArea #superSonglistArea,
